--- a/1.restaurant website/contact.html
+++ b/1.restaurant website/contact.html
@@ -3,8 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>contact restaurant</title>
+    <title>Contact Restaurant</title>
     <link rel="stylesheet" href="css/main.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="navbar">
+      <img src="imgs/logo.png" alt="" class="logo" />
+      <nav class="links flex">
+        <a href="index.html">home</a>
+        <a href="about.html">about</a>
+        <a href="contact.html">contact</a>
+      </nav>
+    </header>
+    <main>
+      <form
+        class="flex"
+        action="submit_contact.php"
+        style="gap: 1rem; flex-direction: column"
+        method="POST"
+      >
+        <h1>contact us</h1>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required />
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required />
+
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" required></textarea>
+
+        <button type="submit">Send Message</button>
+      </form>
+    </main>
+
+    <footer>copyright @dypatil computer dept</footer>
+  </body>
 </html>
