--- a/1.restaurant website/index.html
+++ b/1.restaurant website/index.html
@@ -10,7 +10,7 @@
     <header class="navbar">
       <img src="imgs/logo.png" alt="" class="logo" />
       <nav class="links flex">
-        <a href="#top">home</a>
+        <a href="/index.html">home</a>
         <a href="about.html">about</a>
         <a href="contact.html">contact</a>
       </nav>
