--- a/3.calculator/index.html
+++ b/3.calculator/index.html
@@ -28,10 +28,12 @@
       <br />
       <button onclick="appendToOutput('0')">0</button>
       <button onclick="calculateResult()">=</button>
-      <button onclick="clearOutput()">C</button>
+      <button onclick="square()">x<sup>2</sup></button>
       <button onclick="appendToOutput('/')">/</button>
       <br />
-      <button onclick="square()">Square</button>
+      <button onclick="clearOutput()">AC</button>
+      <button onclick="deleteLastDigit()">Del</button>
+
     </div>
 
     <script src="script.js"></script>
