fixed the footer in about page

--- a/1.restaurant website/about.html
+++ b/1.restaurant website/about.html
@@ -17,7 +17,8 @@
     </header>
     <main style="padding: 4rem 1rem;">
         <div class="main-title">Superman restaurant</div>
-        <div class="main-heading" style="margin-bottom: 2rem">
+        <div class="main-heading">
+          <div class="description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quos
           impedit ex soluta nisi? Fuga provident laudantium voluptates deserunt,
           nobis temporibus rem. Magni, perspiciatis expedita labore dicta sequi
@@ -41,6 +42,7 @@
           corrupti vel odio! Quas nesciunt quo adipisci in esse placeat sed quis
           aliquid nemo earum, maxime provident nulla laborum id quisquam enim?
           Officia, dolorem!
+        </div>
         </div>
       </div>
     </main>
